App-sin cambios
restauracion de modulos originales w_report_projects,w_service_order_reports

--- a/w_report_projects/report/template_project_task_equipment_delivery.xml
+++ b/w_report_projects/report/template_project_task_equipment_delivery.xml
@@ -92,20 +92,14 @@
                                 <strong><span t-esc="'Cant'"/></strong>
                             </td> -->
                             <td rowspan="2" class="text-center" style="border: 2px solid black;">
-                            <strong><span>Informe</span></strong></td>
-                            <td rowspan="2" class="text-center" style="border: 2px solid black;">
                             <strong><span>Description and identification code</span></strong></td>
-                            <td rowspan="2" class="text-center" style="border: 2px solid black;">
-                            <strong><span>Observaciones</span></strong></td>
                         </tr>
                     </thead>
 
                     <tbody>
                         <tr t-foreach="services_data" t-as="serv">
-                            <td><span style="font-family:'arialfont'; font-size: 14px;"><t t-esc="serv['certificate_number']"/></span></td>
                             <!-- <td><span style="font-family:'arialfont'; font-size: 14px;"><t t-esc="serv['qty']"/></span></td> -->
                             <td><span style="font-family:'arialfont'; font-size: 14px;"><t t-esc="serv['service']"/><!-- <br t-esc="serv['description']"/> --></span></td>
-                            <td><span style="font-family:'arialfont'; font-size: 14px;"><t t-esc="serv['observations_report_equipment_delivery']"/></span></td>
                         </tr>
                     </tbody>
 
@@ -113,7 +107,7 @@
             </div>
 
                 <div class="footer">
-                    <!-- <div class="row">
+                    <div class="row">
                         <table sstyle="border-spacing:0;margin-bottom:0;" class="table">
                             <tr>
                                 <td width="20%" height="40" style="border: 1px solid black;vertical-align:middle;">Observaciones</td>
@@ -121,7 +115,7 @@
                         </tr>
                         </table>
                     </div>
-                    -->
+                   
                   
                     <div class="row-12" style="border-bottom: 1px solid black;">
                     </div>
