--- a/w_service_order_reports/report/service_order_multi_report.xml
+++ b/w_service_order_reports/report/service_order_multi_report.xml
@@ -24,6 +24,35 @@
         </record>
 
 
+         <record id="paper_format_certificates_labels" model="report.paperformat">
+            <field name="name">paper.format.certificates.labels</field>
+            <field name="default" eval="True"/>
+            <field name="format">custom</field>
+            <field name="page_height">25</field>
+            <field name="page_width">50</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">3.50</field>
+            <field name="margin_bottom">2</field>
+            <field name="margin_left">1</field>
+            <field name="margin_right">1</field>
+            <field name="header_line" eval="False"/>
+            <field name="header_spacing">0</field>
+            <field name="dpi">90</field>
+        </record>
+
+                <record id="w_certificates_labels" model="ir.actions.report">
+        <field name="name">Etiquetas de Equipos</field>
+        <field name="model">project.task</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">w_service_order_reports.w_certificates_labels_report</field>
+        <field name="report_file">w_service_order_reports.w_certificates_labels_report</field>
+        <field name="print_report_name">'Etiqueta - %s' % (object.certificate_number or 'Attendee').replace('/','')</field>
+        <field name="paperformat_id" ref="w_service_order_reports.paper_format_certificates_labels"/>
+        <field name="binding_model_id" ref="model_project_task"/>
+        <field name="binding_type">report</field>
+        </record>
+
+
     </data>
 </odoo>
 
