--- a/w_service_order_reports/views/inherited_project_views.xml
+++ b/w_service_order_reports/views/inherited_project_views.xml
@@ -24,7 +24,7 @@
                     <field name="observations_report_equipment_reception" optional="show"/>
                     <field name="date_reception" optional="show"/>
                     <field name="brought_by" optional="show"/>
-                    <field name="conditions_report_service_order" optional="show"/>
+                    <field name="especial_requiriments" optional="show"/>
                     <field name="date_service_order" optional="show"/>
                     <field name="fecha_revision_cotizacion" optional="show"/>
                     <field name="lugar_service" optional="show"/>
